--- a/progamer/src/main/webapp/setup_new.xhtml
+++ b/progamer/src/main/webapp/setup_new.xhtml
@@ -5,60 +5,60 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 
+<ui:composition template="/_template.xhtml">
 
-<h:head>
+	<ui:define name="content">
 
-</h:head>
-<body style="background-color: #eee">
-
-
-	<!-- MENU -->
-	<div class="card">
+		<!-- FORM -->
 		<h:form>
-			<p:tabMenu activeIndex="#{param.i}"
-				style="width: 38em; margin: 0 auto; float: none; margin-bottom: 10px; ">
-				<p:menuitem value="Home" icon="pi pi-fw pi-home">
-					<f:param name="i" value="0" />
-				</p:menuitem>
-				<p:menuitem value="Setup" icon="pi pi-fw pi-desktop">
-					<f:param name="i" value="1" />
-				</p:menuitem>
-				<p:menuitem value="Profile" icon="pi pi-fw pi-user">
-					<f:param name="i" value="2" />
-				</p:menuitem>
-			</p:tabMenu>
+		
+			<p:messages id="messages" closable="true">
+				<p:autoUpdate />
+			</p:messages>
+			
+			<p:card style="width: 25em; margin: 1em auto;">
+				<f:facet name="title"> New Setup </f:facet>
+				<div class="ui-fluid">
+					<div class="p-field">
+						<label for="name">Name</label>
+						<p:inputText value="#{setupBean.setup.name}" id="name" type="text"
+							required="true"
+							requiredMessage="O campo nome é obrigatório"
+							 />
+					</div>
+					<div class="p-field">
+						<label for="description">Description</label>
+						<p:inputTextarea value="#{setupBean.setup.description}"
+							id="description" type="text" 
+							validatorMessage="A descrição  deve ter pelo menos 10 caracteres e no máxim 255"/>
+							<f:validateLength minimum="10" maximum="255" />
+							
+					</div>
+					<div class="p-field">
+						<label for="price">Price</label>
+						<p:inputNumber value="#{setupBean.setup.price}" id="price"
+							symbol="R$" decimalSeparator="," thousandSeparator="."
+							required="true"
+							>
+							<f:validateDoubleRange minimun="1"/> 
+						
+						</p:inputNumber>
+					</div>
+				</div>
+
+				<f:facet name="footer">
+					<p:commandButton action="#{setupBean.save()}" icon="pi pi-save"
+						value="Save" />
+					<p:commandButton icon="pi pi-times" value="Cancel"
+						styleClass="ui-button-secondary" style="margin-left: .5em" />
+				</f:facet>
+			</p:card>
 		</h:form>
-	</div>
 
-	<!-- FORM -->
-	<h:form>
-	<p:card
-		style="width: 25em; margin: 1em auto;">
-		<f:facet name="title"> New Setup </f:facet>
-		<div class="ui-fluid">
-			<div class="p-field">
-				<label for="name">Name</label>
-				<p:inputText value="#{setupBean.setup.name}" id="name" type="text" />
-			</div>
-			<div class="p-field">
-				<label for="description">Description</label>
-				<p:inputTextarea value="#{setupBean.setup.description}" id="description" type="text"/>
-			</div>
-			<div class="p-field">
-				<label for="price">Price</label>
-				<p:inputNumber value="#{setupBean.setup.price}" id="price" symbol="R$" decimalSeparator=","
-					thousandSeparator="." />
-			</div>
-		</div>
+	</ui:define>
 
-		<f:facet name="footer">
-			<p:commandButton action="#{setupBean.save()}" icon="pi pi-save" value="Save" />
-			<p:commandButton icon="pi pi-times" value="Cancel"
-				styleClass="ui-button-secondary" style="margin-left: .5em" />
-		</f:facet>
-	</p:card>
-	</h:form>
-</body>
+</ui:composition>
+
 </html>
 
 
