Criada a pagina de criação de usuario

--- a/progamer/src/main/webapp/_template.xhtml
+++ b/progamer/src/main/webapp/_template.xhtml
@@ -21,6 +21,9 @@
 				<p:menuitem value="Profile" outcome="profile.xhtml" icon="pi pi-fw pi-user">
 					<f:param name="i" value="2" />
 				</p:menuitem>
+				<p:menuitem value="Usuario" outcome="usuario_new.xhtml" icon="pi pi-fw pi-user-plus">
+					<f:param name="i" value="3" />
+				</p:menuitem>
 			</p:tabMenu>
 		</h:form>
 	</div>
